fixed many bugs and the Launchable Version